--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: My blog
-subtitle: This is where I will tell you about me
+title: Eric's Blog
+subtitle: A Notebook More than a Blog
 ---
 
 <div class="posts-list">
