New subheading for landing

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: Eric's Blog
-subtitle: A Notebook More than a Blog
+subtitle: Notes, Thoughts and Blog
 ---
 
 <div class="posts-list">
